src/styles/_fileSystemView.scss
.file-system-view-container {
  width: 100%;
  height: 100%;
  padding: 1px;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.file-system-view-empty-space {
  flex-grow: 1;
}

.file-system-view-list-container {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.file-system-view-spinner {
  padding: 5px;
}

.file-system-view-node-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  column-gap: 3px;
  user-select: none;
  padding: 2px 5px;

  &:hover {
    background: $cadet-color-3;
  }
}

.file-system-view-input {
  width: 100%;
  background: transparent;
  border: thin solid $cadet-color-4;
}

